tests/ui/typeck/issue-96530.stderr
error[E0308]: mismatched types
  --> $DIR/issue-96530.rs:9:11
   |
LL |         ..man.clone()
   |           ^^^^^^^^^^^ expected `Person`, found `&Person`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
